[package]
name = "zfx-socket-actix"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = { version = "0.12.0" }
actix-rt = { version = "2.2.0" }
bytes = { version = "1.1.0" }
tokio = { version = "1.9.0", features = ["full"] }